--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -30,8 +30,8 @@
             {{>hero}}
         {{/if}}
     </header>
-    <main>
-       <div class="container">
+    <main style="padding: 0; margin:0; ">
+       <div class="container" >
          {{#if messages }}
             <div class="alerts">
                 {{#showAlerts messages}}
