--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -102,27 +102,6 @@
 }
 
 /*****************************************************
-                    SIDEBAR
-******************************************************/
-
-aside {
-    visibility: hidden;
-    display: none;
-   
-}
-@media ( min-width:800px ){
-    aside {
-        display: block;
-        visibility: visible;
-        background-color: #333;
-        color: #fff;
-        padding: 20px;
-        height: 100vh;
-        width: 400px;
-    }
-}
-
-/*****************************************************
                     HERO
 ******************************************************/
 .hero-image {
@@ -260,4 +239,31 @@ legend {
 .image-update {
     display: flex;
     justify-content: center;
+}
+
+.container-login{
+    height: 100%;
+    margin: 5rem 1rem 0 1rem;
+}
+
+.container-form {
+    background-color: #2c3e50;
+}
+
+.container-form h2 {
+    color: white;
+}
+
+.container-form label {
+    color: white;
+}
+
+.bg-login{
+    background-image: url("/img/login.jpg");
+    background-size: cover;
+}
+
+.bg-register{
+    background-image: url("/img/register.jpg");
+    background-size: cover;
 }
