--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
     <div class="mr-auto w-100">
-      <a class="navbar-brand" href="/">Medical Digitalers</a>
+      <a class="navbar-brand" href="/" style="">
+        <img src="/img/logo.png" alt="Logo clínica del sol">
+      </a>
 
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
