--- a/src/views/doctor/public.hbs
+++ b/src/views/doctor/public.hbs
@@ -23,7 +23,7 @@
                 </div>
         </div>
         <div class="row">
-            <h5 class="border p-2" style="background-color: #2c3e50; text-align: center; color: white;">Citas totales: <span style="font-weight: bold;">{{appointmentsTotal}}</span></h5>
+            <h5 class="border p-2" style="background-color: #2c3e50; text-align: center; color: white;">Citas totales: <span style="font-weight: bold;">{{total}}</span></h5>
         </div>
     </div>
     <div class="col-md-6">
@@ -49,7 +49,13 @@
                                 <input type="hidden" value="{{this.doctor._id}}" name="doctor">
                                 <input type="hidden" value="{{variable._id}}" name="client">
                                 <input type="hidden" value="Confirmed" name="status">
-                                <button type="submit" class="btn btn-warning mt-1 w-100">Seleccionar</button>
+                                <button 
+                                    type="submit" 
+                                    class="btn btn-warning mt-1 w-100"
+                                    {{#isEqual variable.role 'DOCTOR_ROLE'}}
+                                        disabled
+                                    {{/isEqual}}
+                                    >Seleccionar</button>
                             </form>
                         </div>   
                 </div>
