--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{pageName}}</title>
 
-    <!-------------- DATATABLE  ----------------->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
     <!-------------- BOOTSTRAP STYLES  ----------------->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 
@@ -42,11 +39,14 @@
         {{{body}}}
        </div>
     </main>
-
+    <footer>
+        {{#if footer}}
+            {{>footer}}
+        {{/if}}
+    </footer>
 
     <!-------------- DATATABLE  ----------------->
       <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-      <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
       <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
 
       
