--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg" data-bs-theme="dark" style="background-color: #1c2331;">
   <div class="container-fluid">
     <div class="mr-auto w-100">
       <a class="navbar-brand" href="/" style="">
