Se agregó el footer a las vistas

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-
+{{!-- MISION Y EQUIPO --}}
     <div class="row mt-4" id="about">
         <div class="col-md-6 p-4">
             <div class="row">
@@ -35,7 +35,7 @@
                 </p>
             </div>
             <div class="row">
-                <img src="/img/equipo.jpg" alt="">
+                <img src="/img/equipo.jpg" alt="imagen del equipo de clínica del sol" style="height: 23rem; object-fit: cover;">
             </div>
         </div>
     </div>
@@ -89,7 +89,7 @@
         </div>
     </div>
     
-
+{{!-- FILOSOFIA Y CITA --}}
     <div class="row">
         <div class="col-md-6 p-4">
             <h2>Nuestra Filosofía</h2>
