--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -223,6 +223,9 @@ li {
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
     color: #ff990b;
 }
+a {
+    color: #ff990b; 
+}
 .sidebar li .icon {
     display: flex;
     justify-content: center;
@@ -271,7 +274,7 @@ legend {
 
 .container-login{
     height: 100%;
-    margin: 5rem 1rem 0 1rem;
+    margin: 3rem 1rem 0 1rem;
 }
 
 .container-form {
