--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -1,7 +1,9 @@
 <!-- CUERPO DEL LOGIN COMPLETO -->
 <div class="container-login rounded shadow fade-in">
-  <div class="row align-items-stretch">
+  <div>
+    <div class="row align-items-stretch">
     <div class="col container-form p-5 rounded">
+      <img src="/img/logo.png" alt="Logo clínica del sol" style="width: 15rem;">
       <h2 class="title-section has-border my-5">Bienvenido</h2>
       <form action="/auth/login" method="POST">
         <div class="mb-4">
@@ -30,8 +32,6 @@
         </div>
         <div class="mt-3 mb-5" style="color: white;">
           <span>No tienes cuenta? <a href="/auth/register">Regístrate</a> </span> <br />
-          <span><a href="/pages/error404/error404.html" data-bs-toggle="modal"
-            data-bs-target="#passwordModal">Recuperar Contraseña</a></span>
         </div>
       </form>
       <!-- Login con redes sociales -->
@@ -39,5 +39,6 @@
     <div
       class="col bg-login d-none d-lg-block col-md-5 col-lg-5 col-xl-6 rounded"
     ></div>
+  </div>
   </div>
 </div>     
