Se modificaron las vistas de login y register

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -201,8 +201,14 @@
 } */
 
 /*****************************************************
-                    SERVICE
+                    Lista de Doctores
 ******************************************************/
+#lista-doctores {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
 
 li {
     list-style: none;
