--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,7 +1,7 @@
 <div class="home">
     {{!-- ABOUT --}}
     <div class="row mt-4" id="about">
-        <div class="col">
+        <div class="col p-4">
             <h2>Bienvenidos a Clínica del Sol</h2>
             <hr />
             <p>
@@ -110,7 +110,7 @@
 
 
     {{!-- LISTA DE DOCTORES --}}
-    <div class="row mt-4">
+    <div class="row mt-4" id="lista-doctores">
     <h2 >Listado de doctores</h2>
     <hr>
         {{#each doctors}}
