--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -3,7 +3,9 @@
   <div>
     <div class="row align-items-stretch">
     <div class="col container-form p-5 rounded">
-      <img src="/img/logo.png" alt="Logo clínica del sol" style="width: 15rem;">
+      <div class="row justify-content-md-end">
+        <img src="/img/logo.png" alt="Logo clínica del sol"  style="width: 15rem;">
+      </div>
       <h2 class="title-section has-border my-5">Bienvenido</h2>
       <form action="/auth/login" method="POST">
         <div class="mb-4">
