--- a/src/views/doctor/public.hbs
+++ b/src/views/doctor/public.hbs
@@ -52,9 +52,12 @@
                                 <button 
                                     type="submit" 
                                     class="btn btn-warning mt-1 w-100"
-                                    {{#isEqual variable.role 'DOCTOR_ROLE'}}
+                                    {{#isEqual variable.role 'USER_ROLE'}}
+                                        pressed
+                                    {{else}}
                                         disabled
                                     {{/isEqual}}
+                                    
                                     >Seleccionar</button>
                             </form>
                         </div>   
