--- a/src/views/partials/createAppointment.hbs
+++ b/src/views/partials/createAppointment.hbs
@@ -9,13 +9,28 @@
           class="form-control"
           name="doctor"
           id="doctor"
-          value="{{user._id}}"
-          readonly
+          {{#if user.category }}
+            value="{{user._id}}"
+            readonly
+            {{else}}
+            value="{{data._id}}"
+          {{/if}}
           required
         />
-        <div class="invalid-feedback">
-          Ingresar ID del doctor
-        </div>
+        {{!-- PACIENTE --}}
+          {{#isEqual user.role 'ADMIN_ROLE'}}
+            <label for="client" class="form-label mt-3">ID Paciente:</label>
+            <input
+              type="text"
+              class="form-control"
+              name="client"
+              id="client"
+              required
+            />
+            <div class="invalid-feedback">
+              Ingresar ID del paciente
+            </div>
+          {{/isEqual}}
         {{!-- PRECIO --}}
         <label for="price" class="form-label mt-3">Precio:</label>
         <input
@@ -37,9 +52,26 @@
             <label for="appointmentTime" class="form-label">Hora</label>
             <input type="time" class="form-control" name="appointmentTime" id="appointmentTime">
         </div>
+        
+
+      {{#isEqual user.role 'ADMIN_ROLE'}}
+        <div class="row">
+          <div class="col-md-4">
+            <button type="reset" class="btn btn-warning mt-1 mb-1 w-100">Resetear</button>
+          </div>
+          <div class="col-md-4">
+            <button type="submit" class="btn btn-primary mt-1 mb-1 w-100">Crear</button>
+          </div>
+          <div class="col-md-4">
+            <a href="/appointment" class="btn btn-danger w-100 mt-1">Cancelar</a>
+          </div>
+        </div>
+        {{else}}
         <div class="row mt-3">
             <button type="submit" class="btn btn-primary mt-1 mb-1 w-100">Crear</button>
-            <button type="reset" class="btn btn-warning mt-1 mb-1 w-100">Resetear</button>
+            <button type="reset" class="btn btn-warning mt-1 mb-1 w-100">Resetear</button>  
+        </div>
+      {{/isEqual}}
       </div>
     </div>
 
