opciones de eliminar cita desabilitada

--- a/src/views/admin/appointment.hbs
+++ b/src/views/admin/appointment.hbs
@@ -49,7 +49,7 @@
           <td>
             {{!-- EDITAR --}}
             {{!-- <a href="/user/profile/update/{{_id}}"  data-edit="edit"  class="btn btn-success read-button" >Editar</a> --}}
-            <button data-id="{{_id}}" data-delete="{{role}}" class="btn btn-danger delete-btn" id="delete">Eliminar</button>
+            <button data-id="{{_id}}" data-delete="{{role}}" class="btn btn-danger delete-btn" id="delete" disabled>Eliminar</button>
           </td>
         </tr>
       {{/each}}
