--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -6,10 +6,10 @@
     <link rel="shortcut icon" href="/img/icono.png" />
     <title>{{pageName}}</title>
 
-    <!-------------- BOOTSTRAP STYLES  ----------------->
+    <!--------------ESTILOS BOOTSTRAP  ----------------->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 
-    <!-------------- CUSTOM STYLES  ----------------->
+    <!-------------- ESTILOS PROPIOS  ----------------->
     <link rel="stylesheet" href="/css/main.css">
     <!-------------- ICONOS  ----------------->
     <link
@@ -48,9 +48,6 @@
 
     <!-------------- DATATABLE  ----------------->
       <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-      <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
-
-      
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="/js/bootstrap.bundle.min.js"></script>
       <script type="module" src="/js/validation.js"></script>
