--- a/src/views/admin/dashboard.hbs
+++ b/src/views/admin/dashboard.hbs
@@ -1,5 +1,5 @@
 <div class="admin-container d-flex">
-    <div class="container mt-5">
+    <div class="container mt-5 fade-in">
         <div class="row">
             <!-- Card 1 -->
             <div class="col-md-6 d-flex justify-content-center">
@@ -8,7 +8,7 @@
                       <div class="d-flex justify-content-between">
                       <i class="fa-solid fa-user-doctor fa-10x"></i>
                         <div class="d-flex flex-column justify-content-end align-items-end">
-                          <p class="array-number">4</p>
+                          <p class="array-number">{{doctors}}</p>
                           <h4 class="card-title">Médicos</h4>
                         </div>
                       </div>
@@ -26,7 +26,7 @@
                     <div class="d-flex justify-content-between">
                       <i class="fa-solid fa-hospital-user fa-10x"></i>
                         <div class="d-flex flex-column justify-content-end align-items-end">
-                          <p class="array-number">4</p>
+                          <p class="array-number">{{users}}</p>
                           <h4 class="card-title">Pacientes</h4>
                         </div>
                      </div>
@@ -44,12 +44,12 @@
                     <div class="d-flex justify-content-between">
                       <i class="fa-solid fa-laptop-medical fa-10x"></i>
                       <div class="d-flex flex-column justify-content-end align-items-end">
-                        <p class="array-number">4</p>
-                        <h4 class="card-title">Consultas</h4>
+                        <p class="array-number">{{appointments}}</p>
+                        <h4 class="card-title">Citas</h4>
                       </div>
                     </div>
                     <div>
-                      <a href="#" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
+                      <a href="/appointment" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
                     </div>
                   </div>
                 </div>
@@ -67,7 +67,7 @@
                       </div>
                     </div>
                     <div>
-                      <a href="#" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
+                      <a href="#" class="btn btn-card-dashboard w-100 mt-2">En construcción</a>
                     </div>
                   </div>
                 </div>
