--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,6 +1,6 @@
 <div class="home">
     {{!-- ABOUT --}}
-    <div class="row mt-4" id="about">
+    <div class="row mt-4 fade-in" id="about">
         <div class="col p-4">
             <h2>Bienvenidos a Clínica del Sol</h2>
             <hr />
@@ -11,7 +11,7 @@
     </div>
 
 {{!-- MISION Y EQUIPO --}}
-    <div class="row mt-4" id="about">
+    <div class="row mt-4 fade-in" id="about">
         <div class="col-md-6 p-4">
             <div class="row">
                 <h2>Nuestra Misión</h2>
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div style="background-color: #1c2331; color: white;" id="service">
+    <div style="background-color: #1c2331; color: white;" id="service" class="fade-in">
         <div class="row mt-4">
             <div class="col-md-6" style="padding: 1.5rem 0 0 2rem;">
                 <h2>Nuestros servicios</h2>
