Corrección de errores al editar citas

--- a/src/views/partials/hero.hbs
+++ b/src/views/partials/hero.hbs
@@ -2,5 +2,9 @@
   <div class="hero-text">
     <h1>Clínica del Sol</h1>
     <p>Atención Médica Profesional y Cuidado Personalizado</p>
+    <div>
+      <a href="#lista-doctores" class="btn btn-warning">Doctores</a>
+      <a href="#about" class="btn btn-primary">Ver más</a>
+    </div>
   </div>
 </div>
