--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -1,16 +1,15 @@
 <nav class="navbar navbar-expand-lg" data-bs-theme="dark" style="background-color: #1c2331;">
   <div class="container-fluid">
-    <div class="mr-auto w-100">
+    <div>
       <a class="navbar-brand" href="/" style="">
         <img src="/img/logo.png" alt="Logo clínica del sol">
       </a>
-
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav navbar-custom"> 
+      <ul class="navbar-nav navbar-custom ms-auto"> 
         <li class="nav-item">
           <a class="nav-link" href="/">Inicio
             <span class="visually-hidden">(current)</span>
