--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -129,11 +129,35 @@
   }
 .hero-text h1 {
     font-size: 5rem;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     padding: 1rem;
+    text-transform: uppercase;
 }
 .hero-text p{
     font-size: 1.3rem;
+}
+
+@keyframes show {
+    from {
+        opacity: 0;
+        scale: 25%;
+    }
+    to {
+        opacity: 1;
+        scale: 100%;
+    }
+}
+
+
+img {
+    view-timeline-name: --image;
+    view-timeline-axis: block;
+
+    animation-timeline: --image;
+    animation-name: show;
+
+    animation-range: entry 25% cover 30%;
+    animation-fill-mode: both;
 }
 /* .text {
     font-size: 18px;
@@ -229,6 +253,13 @@ li {
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
     color: #ff990b;
 }
+/* @media (min-width: 900px) {
+    .navbar-responsive {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+} */
 a {
     color: #ff990b; 
 }
