--- a/src/views/admin/appointment.hbs
+++ b/src/views/admin/appointment.hbs
@@ -1,4 +1,4 @@
-<div class="container fade-in">
+<div class="container fade-in" style="padding-top: 7rem;">
   <div class="d-flex justify-content-between p-3">
     <h1>Lista de citas</h1>
     <a href="/appointment/create" class="btn btn-primary d-flex justify-content-center align-items-center h-100" role="button">
