--- a/src/views/admin/dashboard.hbs
+++ b/src/views/admin/dashboard.hbs
@@ -1,4 +1,4 @@
-<div class="admin-container d-flex">
+<div class="admin-container d-flex" style="padding-top: 7rem;">
     <div class="container mt-5 fade-in">
         <div class="row">
             <!-- Card 1 -->
