--- a/src/views/admin/doctor.hbs
+++ b/src/views/admin/doctor.hbs
@@ -1,5 +1,5 @@
-<div class="container fade-in">
-  <div class="d-flex justify-content-between p-3">
+<div style="padding-top: 7rem;" class="container fade-in">
+  <div class="d-flex justify-content-between">
     <h1>Lista de médicos</h1>
     <a href="doctor/create" class="btn btn-primary d-flex justify-content-center align-items-center h-100" role="button">
       <span><i class="fa-solid fa-user-plus pe-2"></i></span>
