--- a/src/views/appointment/update.hbs
+++ b/src/views/appointment/update.hbs
@@ -1,4 +1,4 @@
-<form action="/appointment/{{data._id}}?_method=PUT" method="POST" class="fade-in mb-2 pb-3 needs-validation" novalidate>
+<form action="/appointment/{{data._id}}?_method=PUT" method="POST" class="fade-in mb-2 pb-3 needs-validation" novalidate style="padding-top: 7rem;">
     <input type="hidden" name="_method" value="PUT">
     <fieldset>
     <legend>Modificar cita Médica</legend>
