--- a/src/views/doctor/createDoctor.hbs
+++ b/src/views/doctor/createDoctor.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="padding-top: 7rem;">
     <form action="/doctor/create" method="POST" class="fade-in mb-2 mt-5" >
         <fieldset class="p-3">
         <legend>Crear un Doctor</legend>
