--- a/src/views/profile/doctor.hbs
+++ b/src/views/profile/doctor.hbs
@@ -1,4 +1,4 @@
-<section style="background-color: #f8f8f8;" class="container fade-in">
+<section style="background-color: #f8f8f8; padding-top: 9rem;" class="container fade-in">
     <div class="row p-3">
       <div class="col-lg-4">
         <div class="card mb-4">
@@ -13,7 +13,7 @@
             
             <h5 class="my-3">{{user.firstname}}</h5>
             <p class="text-muted mb-1">{{user.adress}}</p>
-            <p class="text-muted mb-4">{{user._id}}</p>
+            <p class="text-muted mb-4">Médico</p>
             <div class="d-flex justify-content-center mb-2">
                 <a href="/doctor/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
             </div>
