--- a/src/views/doctor/public.hbs
+++ b/src/views/doctor/public.hbs
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="padding-top: 6rem;">
     <div class="col-md-6 border h-100 mt-3">
         <div class="row">
             <h2 class="pt-2">{{doctor.firstname}} {{doctor.lastname}}</h2>
