--- a/src/views/doctor/updateDoctor.hbs
+++ b/src/views/doctor/updateDoctor.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="padding-top: 5rem;">
 {{!-- Formulario subir imagen --}}
     {{>imageForm}}
 {{!-- Formulario crear/editar doctor --}}
