--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" data-bs-theme="dark" style="background-color: #1c2331;">
+<nav class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark" style="background-color: #1c2331;">
   <div class="container-fluid">
     <div>
       <a class="navbar-brand" href="/" style="">
@@ -33,7 +33,7 @@
               Administración
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/admin">Inicio</a></li>
+              <li><a class="dropdown-item" href="/admin">Dashboard</a></li>
               <li><a class="dropdown-item" href="/doctor">Doctores</a></li>
               <li><a class="dropdown-item" href="/user">Usuarios</a></li>
               <li><a class="dropdown-item" href="/appointment">Citas</a></li>
