--- a/src/views/profile/form.hbs
+++ b/src/views/profile/form.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="padding-top: 5rem;">
   <form
     action="/images/{{data._id}}"
     method="POST"
