--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -1,4 +1,4 @@
-<section style="background-color: #f8f8f8;" class="container mt-4 fade-in">
+<section style="background-color: #f8f8f8; padding-top: 5rem" class="container mt-4 fade-in">
     <div class="row p-3">
       <div class="col-lg-4">
         <div class="card mb-4">
