Actualización en la estructura del login y register

--- a/src/views/admin/dashboard.hbs
+++ b/src/views/admin/dashboard.hbs
@@ -67,7 +67,7 @@
                       </div>
                     </div>
                     <div>
-                      <a href="#" class="btn btn-card-dashboard w-100 mt-2">En construcción</a>
+                      <button class="btn btn-card-dashboard w-100 mt-2" disabled>En construcción</button>
                     </div>
                   </div>
                 </div>
