corrección responsive en login y register

--- a/src/views/auth/register.hbs
+++ b/src/views/auth/register.hbs
@@ -1,7 +1,7 @@
 <section class="vh-100 w-100">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-6 text-black">
+      <div class="col-sm-12 col-lg-6 text-black">
 
         <div class="row justify-content-md-end p-3 mt-2">
           <img
@@ -75,7 +75,7 @@
         </div>
 
       </div>
-      <div class="col-sm-6 px-0 d-none d-sm-block">
+      <div class="col-sm-6 px-0 d-none d-md-block">
         <img
           src="/img/register.jpg"
           alt="Login image"
