--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -1,7 +1,7 @@
 <section class="vh-100 w-100">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-6 text-black">
+      <div class="col-sm-12 col-lg-6 text-black">
 
         <div class="row justify-content-md-end p-3 mt-2" >
             <img src="/img/logo.png" 
@@ -49,7 +49,7 @@
         </div>
 
       </div>
-      <div class="col-sm-6 px-0 d-none d-sm-block">
+      <div class="col-sm-6 px-0 d-none d-md-block">
         <img src="/img/login.jpg"
           alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
       </div>
